--- a/apart_sale/main/templates/base.html
+++ b/apart_sale/main/templates/base.html
@@ -15,9 +15,9 @@
     <link href="{% static 'img/apple-touch-icon.png' %}" rel="apple-touch-icon">
 
     <!-- Google Fonts -->
-    <link
-            href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700&family=Poppins:wght@400;500;600;700&display=swap"
-            rel="stylesheet">
+    <!--    <link-->
+    <!--            href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@400;600;700&family=Poppins:wght@400;500;600;700&display=swap"-->
+    <!--            rel="stylesheet">-->
 
     <!-- Vendor CSS Files -->
     <link href="{% static 'vendor/animate.css/animate.min.css' %}" rel="stylesheet">
@@ -64,11 +64,13 @@
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link " href="/about">О Нас</a>
+                    <a class="nav-link {% if request.resolver_match.url_name == 'contact' %} active {% endif %}"
+                       href="{% url 'contacts:contact' %}">О Нас</a>
                 </li>
 
                 <li class="nav-item">
-                    <a class="nav-link " href="/contact">Контакты</a>
+                    <a class="nav-link {% if request.resolver_match.url_name == 'about' %} active {% endif %}"
+                       href="{% url 'contacts:about' %}">Контакты</a>
                 </li>
             </ul>
         </div>
@@ -86,82 +88,20 @@
             <div class="col-sm-12 col-md-4">
                 <div class="widget-a">
                     <div class="w-header-a">
-                        <h3 class="w-title-a text-brand">EstateAgency</h3>
+                        <h5 class="w-title-a text-brand">Агентство недвижимости</h5>
                     </div>
                     <div class="w-body-a">
                         <p class="w-text-a color-text-a">
-                            Enim minim veniam quis nostrud exercitation ullamco laboris nisi ut aliquip exea commodo
-                            consequat duis
-                            sed aute irure.
+                            Компания NNNN APART предлагает комфортабельные апартаменты в Нальчике!
                         </p>
                     </div>
                     <div class="w-footer-a">
                         <ul class="list-unstyled">
                             <li class="color-a">
-                                <span class="color-text-a">Phone .</span> contact@example.com
+                                <span class="color-text-a">Телефон: </span>+54 356 945234
                             </li>
                             <li class="color-a">
-                                <span class="color-text-a">Email .</span> +54 356 945234
-                            </li>
-                        </ul>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-12 col-md-4 section-md-t3">
-                <div class="widget-a">
-                    <div class="w-header-a">
-                        <h3 class="w-title-a text-brand">The Company</h3>
-                    </div>
-                    <div class="w-body-a">
-                        <div class="w-body-a">
-                            <ul class="list-unstyled">
-                                <li class="item-list-a">
-                                    <i class="bi bi-chevron-right"></i> <a href="#">Site Map</a>
-                                </li>
-                                <li class="item-list-a">
-                                    <i class="bi bi-chevron-right"></i> <a href="#">Legal</a>
-                                </li>
-                                <li class="item-list-a">
-                                    <i class="bi bi-chevron-right"></i> <a href="#">Agent Admin</a>
-                                </li>
-                                <li class="item-list-a">
-                                    <i class="bi bi-chevron-right"></i> <a href="#">Careers</a>
-                                </li>
-                                <li class="item-list-a">
-                                    <i class="bi bi-chevron-right"></i> <a href="#">Affiliate</a>
-                                </li>
-                                <li class="item-list-a">
-                                    <i class="bi bi-chevron-right"></i> <a href="#">Privacy Policy</a>
-                                </li>
-                            </ul>
-                        </div>
-                    </div>
-                </div>
-            </div>
-            <div class="col-sm-12 col-md-4 section-md-t3">
-                <div class="widget-a">
-                    <div class="w-header-a">
-                        <h3 class="w-title-a text-brand">International sites</h3>
-                    </div>
-                    <div class="w-body-a">
-                        <ul class="list-unstyled">
-                            <li class="item-list-a">
-                                <i class="bi bi-chevron-right"></i> <a href="#">Venezuela</a>
-                            </li>
-                            <li class="item-list-a">
-                                <i class="bi bi-chevron-right"></i> <a href="#">China</a>
-                            </li>
-                            <li class="item-list-a">
-                                <i class="bi bi-chevron-right"></i> <a href="#">Hong Kong</a>
-                            </li>
-                            <li class="item-list-a">
-                                <i class="bi bi-chevron-right"></i> <a href="#">Argentina</a>
-                            </li>
-                            <li class="item-list-a">
-                                <i class="bi bi-chevron-right"></i> <a href="#">Singapore</a>
-                            </li>
-                            <li class="item-list-a">
-                                <i class="bi bi-chevron-right"></i> <a href="#">Philippines</a>
+                                <span class="color-text-a">Email: </span> contact@example.com
                             </li>
                         </ul>
                     </div>
@@ -177,19 +117,16 @@
                 <nav class="nav-footer">
                     <ul class="list-inline">
                         <li class="list-inline-item">
-                            <a href="#">Home</a>
+                            <a href="/">Домой</a>
                         </li>
                         <li class="list-inline-item">
-                            <a href="#">About</a>
+                            <a href="#">Наши апартаменты</a>
                         </li>
                         <li class="list-inline-item">
-                            <a href="#">Property</a>
+                            <a href="#">О Нас</a>
                         </li>
                         <li class="list-inline-item">
-                            <a href="#">Blog</a>
-                        </li>
-                        <li class="list-inline-item">
-                            <a href="#">Contact</a>
+                            <a href="#">Контакты</a>
                         </li>
                     </ul>
                 </nav>
@@ -220,17 +157,11 @@
                 <div class="copyright-footer">
                     <p class="copyright color-text-a">
                         &copy; Copyright
-                        <span class="color-a">EstateAgency</span> All Rights Reserved.
+                        <span class="color-a">Агентство недвижимости</span> Все права защищены.
                     </p>
                 </div>
                 <div class="credits">
-                    <!--
-                    All the links in the footer should remain intact.
-                    You can delete the links only if you purchased the pro version.
-                    Licensing information: https://bootstrapmade.com/license/
-                    Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=EstateAgency
-                  -->
-                    Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
+                    Designed by <a href="https://github.com/erofcon">erofcon</a>
                 </div>
             </div>
         </div>
