--- a/apart_sale/apartments/templates/single_apartment.html
+++ b/apart_sale/apartments/templates/single_apartment.html
@@ -123,7 +123,7 @@
                 </div>
                 <div class="col-md-10 offset-md-1">
                     <ul class="nav nav-pills-a nav-pills mb-3 section-t3" id="pills-tab" role="tablist">
-                        {% if apartment.plan %}
+
                         <li class="nav-item">
                             <a class="nav-link active" id="pills-map-tab"
                                data-bs-toggle="pill" href="#pills-map" role="tab"
@@ -131,6 +131,7 @@
                                aria-selected="true ">Место
                                 расположения</a>
                         </li>
+
                         {% if apartment.plan %}
                         <li class="nav-item">
                             <a class="nav-link" id="pills-plans-tab" data-bs-toggle="pill" href="#pills-plans"
@@ -156,97 +157,15 @@
                     <div class="row section-t3">
                         <div class="col-sm-12">
                             <div class="title-box-d">
-                                <h3 class="title-d">Contact Agent</h3>
+                                <h3 class="title-d">Контакты</h3>
                             </div>
                         </div>
                     </div>
-                    <div class="row">
-                        <div class="col-md-6 col-lg-4">
-                            <img src="assets/img/agent-4.jpg" alt="" class="img-fluid">
-                        </div>
-                        <div class="col-md-6 col-lg-4">
-                            <div class="property-agent">
-                                <h4 class="title-agent">Anabella Geller</h4>
-                                <p class="color-text-a">
-                                    Nulla porttitor accumsan tincidunt. Vestibulum ac diam sit amet quam vehicula
-                                    elementum sed sit amet
-                                    dui. Quisque velit nisi,
-                                    pretium ut lacinia in, elementum id enim.
-                                </p>
-                                <ul class="list-unstyled">
-                                    <li class="d-flex justify-content-between">
-                                        <strong>Phone:</strong>
-                                        <span class="color-text-a">(222) 4568932</span>
-                                    </li>
-                                    <li class="d-flex justify-content-between">
-                                        <strong>Mobile:</strong>
-                                        <span class="color-text-a">777 287 378 737</span>
-                                    </li>
-                                    <li class="d-flex justify-content-between">
-                                        <strong>Email:</strong>
-                                        <span class="color-text-a">annabella@example.com</span>
-                                    </li>
-                                    <li class="d-flex justify-content-between">
-                                        <strong>Skype:</strong>
-                                        <span class="color-text-a">Annabela.ge</span>
-                                    </li>
-                                </ul>
-                                <div class="socials-a">
-                                    <ul class="list-inline">
-                                        <li class="list-inline-item">
-                                            <a href="#">
-                                                <i class="bi bi-facebook" aria-hidden="true"></i>
-                                            </a>
-                                        </li>
-                                        <li class="list-inline-item">
-                                            <a href="#">
-                                                <i class="bi bi-twitter" aria-hidden="true"></i>
-                                            </a>
-                                        </li>
-                                        <li class="list-inline-item">
-                                            <a href="#">
-                                                <i class="bi bi-instagram" aria-hidden="true"></i>
-                                            </a>
-                                        </li>
-                                        <li class="list-inline-item">
-                                            <a href="#">
-                                                <i class="bi bi-linkedin" aria-hidden="true"></i>
-                                            </a>
-                                        </li>
-                                    </ul>
-                                </div>
-                            </div>
-                        </div>
-                        <div class="col-md-12 col-lg-4">
-                            <div class="property-contact">
-                                <form class="form-a">
-                                    <div class="row">
-                                        <div class="col-md-12 mb-1">
-                                            <div class="form-group">
-                                                <input type="text" class="form-control form-control-lg form-control-a"
-                                                       id="inputName" placeholder="Name *" required>
-                                            </div>
-                                        </div>
-                                        <div class="col-md-12 mb-1">
-                                            <div class="form-group">
-                                                <input type="email" class="form-control form-control-lg form-control-a"
-                                                       id="inputEmail1" placeholder="Email *" required>
-                                            </div>
-                                        </div>
-                                        <div class="col-md-12 mb-1">
-                                            <div class="form-group">
-                                                <textarea id="textMessage" class="form-control" placeholder="Comment *"
-                                                          name="message" cols="45" rows="8" required></textarea>
-                                            </div>
-                                        </div>
-                                        <div class="col-md-12 mt-3">
-                                            <button type="submit" class="btn btn-a">Send Message</button>
-                                        </div>
-                                    </div>
-                                </form>
-                            </div>
-                        </div>
-                    </div>
+                    <section class="contact">
+
+                        {% include "contact_base.html" %}
+
+                    </section><!-- End Contact Single-->
                 </div>
             </div>
         </div>
@@ -256,18 +175,13 @@
 
 <script>
 
-    let mapOptions = {
-        center: [17.385044, 78.486671],
-        zoom: 10
-    }
+    var lon = parseFloat("{{apartment.lon}}".replace(",", "."));
+    var lat = parseFloat("{{apartment.lat}}".replace(",", "."));
 
-    let accessToken = 'pk.eyJ1IjoidGFtaXJsYW4wMDkiLCJhIjoiY2xwODFyaHF1MHR6ZTJpbDZkdGRwNXRpaiJ9.j8SBP-qvLSdkh2yFdbr7QA'
-
-    // Creating a map object
     var map = new L.map('map', {
         zoomAnimation: true,
         zoomControl: false
-    }).setView([43.4974784851074, 43.655876159668], 10);
+    }).setView([!isNaN(lat) ? lat : 43.4974784851074, !isNaN(lon) ? lon : 43.655876159668], 12);
 
     let layer = L.tileLayer(
         'http://tile2.maps.2gis.com/tiles?x={x}&y={y}&z={z}',
@@ -277,10 +191,19 @@
         }
     );
 
-    // Creating a Layer object
-    // var layer = new L.TileLayer('http://{s}.tile.openstreetmap.org/{z}/{x}/{y}.png');
+    if (!isNaN(lat) && !isNaN(lon)) {
 
-    // Adding layer to the map
+        var myIcon = L.icon({
+            iconUrl: "{% static 'img/marker-icon.png' %}",
+            iconSize: [55, 55],
+            iconAnchor: [22, 94],
+        });
+
+        L.marker([lat, lon], {icon: myIcon}).addTo(map);
+
+    }
+
+
     map.addLayer(layer);
 </script>
 
