--- a/apart_sale/main/static/css/leaflet.css
+++ b/apart_sale/main/static/css/leaflet.css
@@ -513,11 +513,15 @@ svg.leaflet-image-layer.leaflet-interactive path {
 }
 
 .leaflet-attribution-flag {
-    display: inline !important;
-    vertical-align: baseline !important;
-    width: 1em;
-    height: 0.6669em;
+    display: none!important;
 }
+
+/*.leaflet-attribution-flag {*/
+/*    display: inline !important;*/
+/*    vertical-align: baseline !important;*/
+/*    width: 1em;*/
+/*    height: 0.6669em;*/
+/*}*/
 
 .leaflet-left .leaflet-control-scale {
     margin-left: 5px;
